--- a/profile.html
+++ b/profile.html
@@ -3,61 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crime Lords - Profile</title>
-
-  <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    integrity="sha512-yH4FDDf34rKH0FJ4U95XMHqDw3Y+z3qK6cK2tN7FtcJcm1QVG9gsv+IbKd1H0WrsjQJ1NDu9YFaOcHv2jFf+3A=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="css/style.css" />
+  <title>Profile - Crime Lords</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div class="container glassmorphic">
 
-    <!-- Header -->
-    <header class="glass-header">
-      <a href="index.html" class="title-link">
-        <h1><i class="fas fa-skull-crossbones"></i> Crime Lords</h1>
-      </a>
-      <p class="tagline">Your underground identity and stats</p>
-    </header>
+    <div id="header-placeholder"></div>
 
-    <!-- Profile Panel -->
-    <section class="glass-box profile-panel">
-      <div class="profile-top">
-        <img src="assets/images/avatar.png" alt="Player Avatar" class="avatar">
-        <div class="info">
-          <h2>ShadowWolf</h2>
-          <p><i class="fas fa-star"></i> Level 12</p>
-          <p><i class="fas fa-clock"></i> Member since: Jan 2025</p>
-        </div>
+    <section class="profile">
+      <h2><i class="fa-solid fa-user"></i> Profile</h2>
+
+      <div class="profile-box">
+        <label>Player Name:</label>
+        <input type="text" id="player-name" placeholder="Enter your name">
+        <button onclick="saveName()">Save</button>
       </div>
 
-      <div class="stats-box">
-        <p><i class="fas fa-dna"></i> XP: <strong>2400 / 3000</strong></p>
-        <p><i class="fas fa-money-bill-wave"></i> Total Cash Earned: <strong>$28,700</strong></p>
-        <p><i class="fas fa-fire"></i> Missions Completed: <strong>34</strong></p>
-        <p><i class="fas fa-user-group"></i> Faction: <strong>Night Reapers</strong></p>
+      <div class="profile-box">
+        <p><strong>Faction:</strong> <span id="faction-name">None</span></p>
+        <p><strong>XP:</strong> <span id="xp">0</span></p>
+        <p><strong>Cash:</strong> $<span id="cash">0</span></p>
       </div>
 
-      <div class="customize-box">
-        <h3><i class="fas fa-paint-brush"></i> Customize</h3>
-        <button class="glass-button"><i class="fas fa-user-pen"></i> Change Name</button>
-        <button class="glass-button"><i class="fas fa-image"></i> Change Avatar</button>
-        <button class="glass-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
+      <div class="profile-box">
+        <p><strong>Health:</strong> <span id="health-val">0</span>/100</p>
+        <div class="bar"><div class="bar-fill" id="health-bar"></div></div>
+
+        <p><strong>Energy:</strong> <span id="energy-val">0</span>/100</p>
+        <div class="bar"><div class="bar-fill energy" id="energy-bar"></div></div>
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="glass-footer">
-      <p>&copy; 2025 Crime Lords by Swarup</p>
-    </footer>
+    <div id="navbar-placeholder"></div>
   </div>
+
+  <script src="script.js"></script>
+
+  <script>
+    function loadProfile() {
+      document.getElementById("player-name").value = localStorage.getItem("playerName") || "";
+      document.getElementById("faction-name").textContent = localStorage.getItem("currentFaction") || "None";
+
+      document.getElementById("xp").textContent = localStorage.getItem("xp") || "0";
+      document.getElementById("cash").textContent = localStorage.getItem("cash") || "0";
+      document.getElementById("health-val").textContent = localStorage.getItem("health") || "0";
+      document.getElementById("energy-val").textContent = localStorage.getItem("energy") || "0";
+
+      document.getElementById("health-bar").style.width = `${localStorage.getItem("health") || 0}%`;
+      document.getElementById("energy-bar").style.width = `${localStorage.getItem("energy") || 0}%`;
+    }
+
+    function saveName() {
+      const name = document.getElementById("player-name").value.trim();
+      if (!name) return alert("Enter a valid name.");
+      localStorage.setItem("playerName", name);
+      alert("Name saved!");
+    }
+
+    loadProfile();
+
+    // Load header and navbar
+    fetch("header.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("header-placeholder").innerHTML = data;
+      });
+
+    fetch("navbar.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("navbar-placeholder").innerHTML = data;
+      });
+  </script>
 </body>
 </html>
